# sway-contracts

./: Cargo.toml  Forc.toml
contracts/ERC721/: Cargo.toml  Forc.toml
contracts/ERC721/src/: events.sw  interface.sw  main.sw
contracts/ERC721/tests/functions/: owner.rs
contracts/ERC721/tests/utils/: mod.rs
contracts/NFT/: Cargo.toml  Forc.toml
contracts/NFT/src/: events.sw  interface.sw  main.sw
contracts/NFT/tests/functions/: approve.rs  burn.rs  mint.rs  mod.rs  owner_of.rs  transfer.rs
contracts/NFT/tests/utils/: mod.rs
contracts/Ownable/: Forc.toml
contracts/Ownable/src/: data_structures.sw  errors.sw  events.sw  ownable.sw
src/ERC20/: events.sw  main.sw
src/ERC721/: errors.sw  interface.sw
