[package]
name = "erc721"
version = "0.1.0"
edition = "2021"
authors = ["tasibii"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.34.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
